# CodeRefactor

./: .gitignore  CMakeLists.txt  CodeRefactor.cpp  CodeRefactor.h  CodeRefactor.vpp  Decl.vpp  README.MD  README.md  main.cpp  qml.qrc  test.pro  课程答辩_余诗雨.pptx  课程答辩_赵亚伟.pptx  课程答辩_高健.pptx
AST/: AST.hpp  ASTContext.cpp  ASTContext.h  CMakeLists.txt  Expr.cpp  Expr.h  Stmt.cpp  Stmt.h  StmtIterator.cpp  StmtIterator.h  StmtNodes.def  Type.cpp  Type.h  TypeNodes.def
ASTOperation/: CMakeLists.txt  Corrector.cpp  Corrector.h  Printer.cpp  Printer.h  Refactor.cpp  Refactor.h
Basic/: CMakeLists.txt  IdentifierTable.cpp  IdentifierTable.h  Iterator.cbp  SourceLocation.cpp  SourceLocation.h
Decl/: CMakeLists.txt  Decl.cpp  Decl.h  DeclBase.cpp  DeclBase.h  DeclContextHolder.cpp  DeclContextHolder.h  DeclGroup.cpp  DeclGroup.h  DeclGroupRef.cpp  DeclGroupRef.h  DeclIterator.cpp  DeclIterator.h  DeclName.cpp  DeclName.h  DeclNodes.def
Declarations/: Decl.h  DeclBase.cpp  DeclBase.h  DeclGroupRef.cpp  DeclGroupRef.h  DeclarationName.h  QualType.cpp  QualType.h  SourceLocation.h
Errors/: CMakeLists.txt  NullPointerError.cpp  NullPointerError.h  SymbolError.hpp  SyntaxError.hpp  TypeError.hpp
Expr/: arraysubscriptexpr.cpp  arraysubscriptexpr.h  callexpr.cpp  callexpr.h  characterliteral.cpp  characterliteral.h  compoundliteralexpr.cpp  compoundliteralexpr.h  conditionaloperator.cpp  conditionaloperator.h  declrefexpr.cpp  declrefexpr.h  expr.cpp  expr.h  floatingliteral.cpp  floatingliteral.h  imaginaryliteral.cpp  imaginaryliteral.h  integerliteral.cpp  integerliteral.h  memberexpr.cpp  memberexpr.h  parenexpr.cpp  parenexpr.h  predefinedexpr.cpp  predefinedexpr.h  sizeofalignofexpr.cpp  sizeofalignofexpr.h  stringliteral.cpp  stringliteral.h  unaryoperator.cpp  unaryoperator.h
Expr/BinaryOperator/: binaryoperator.cpp  binaryoperator.h  compoundassignoperator.cpp  compoundassignoperator.h
Expr/CaseExpr/: caseexpr.cpp  caseexpr.h  implicitcaseexpr.cpp  implicitcaseexpr.h
Expr/CaseExpr/ExplicitCastExpr/: cstylecastexpr.cpp  cstylecastexpr.h  explicitcastexpr.cpp  explicitcastexpr.h
Expression/: ArgumentList.cpp  ArgumentList.h  Constant.cpp  Constant.h  Expression.cpp  Expression.h  Identity.cpp  Identity.h  Literal.hpp
Expression/Operation/: BinaryOperation.cpp  BinaryOperation.h  CastExpression.cpp  CastExpression.h  CommaExpression.cpp  CommaExpression.h  FunctionCall.cpp  FunctionCall.h  MemberAccess.cpp  MemberAccess.h  Operation.cpp  Operation.h  PostfixUnaryOperation.cpp  PostfixUnaryOperation.h  PrefixUnaryOperation.cpp  PrefixUnaryOperation.h  RandomAccess.cpp  RandomAccess.h  TernaryOperation.cpp  TernaryOperation.h
Factory/: ExpressionFactory.cpp  ExpressionFactory.h
Interface/: CMakeLists.txt  CodeContrast.qml  CodeView.qml  ErrorDialog.qml  FileView.qml  Interface.cpp  Interface.h  MenuBarView.qml  RadioMenu.qml  TextDisplayView.qml  ToolView.qml  main.qml  qml.qrc
Iterator/: CMakeLists.txt  DeclIterator.cpp  DeclIterator.h  Iterator.hpp  StmtIterator.cpp  StmtIterator.h
OpenHelper/: CMakeLists.txt  FileOpenHelper.h  OpenHelper.h  StdioOpenHelper.h  StringStreamOpenHelper.cpp  StringStreamOpenHelper.h
Opener/: FileOpenHelper.cpp  FileOpenHelper.h  FileOpener.cpp  FileOpener.h  OpenHelper.cpp  OpenHelper.h  Opener.cpp  Opener.h  StdioOpenHelper.cpp  StdioOpenHelper.h  StdioOpener.cpp  StdioOpener.h  StringOpener.cpp  StringOpener.h  StringStreamOpenHelper.cpp  StringStreamOpenHelper.h
Parser/: CMakeLists.txt  Driver.cpp  Driver.h  Scanner.h  YaccAdapter.cpp  YaccAdapter.h  grammar.y  lex.l  yylval.h
Stmt/: breakstmt.cpp  breakstmt.h  compoundstmt.cpp  compoundstmt.h  continuestmt.cpp  continuestmt.h  declstmt.cpp  declstmt.h  dostmt.cpp  dostmt.h  forstmt.cpp  forstmt.h  gotostmt.cpp  gotostmt.h  ifstmt.cpp  ifstmt.h  indirectgotostmt.cpp  indirectgotostmt.h  labelstmt.cpp  labelstmt.h  nullstmt.cpp  nullstmt.h  returnstmt.cpp  returnstmt.h  stmt.cpp  stmt.h  whilestmt.cpp  whilestmt.h
Stmt/SwitchStmt/: switchstmt.cpp  switchstmt.h
Stmt/SwitchStmt/SwitchCase/: casestmt.cpp  casestmt.h  defaultstmt.cpp  defaultstmt.h  switchcase.cpp  switchcase.h
Test/: ASTStructurePrintTest.cpp  BasicParseTest.cpp  DeclarationTest.cpp  HybridParseTest.cpp  OpenHelperTest.cpp  RefactorTest.cpp  Test.Code1  test3.c
Type/: blockpointertype.cpp  blockpointertype.h  builtintype.cpp  builtintype.h  complextype.cpp  complextype.h  extqualtype.cpp  extqualtype.h  fixedwidthinttype.cpp  fixedwidthinttype.h  memberpointertype.cpp  memberpointertype.h  pointertype.cpp  pointertype.h  qualifiednametype.cpp  qualifiednametype.h  qualifierset.cpp  qualifierset.h  qualtype.cpp  qualtype.h  templatespecializationtype.cpp  templatespecializationtype.h  templatetypeparmtype.cpp  templatetypeparmtype.h  type.cpp  type.h  typedeftype.cpp  typedeftype.h  typenametype.cpp  typenametype.h  typeoftype.cpp  typeoftype.h
Type/ArrayType/: arraytype.h  dependentsizedarraytype.cpp  dependentsizedarraytype.h  incompletearraytype.cpp  incompletearraytype.h  variablearraytype.cpp  variablearraytype.h
Type/DecltypeType/: decltypetype.cpp  decltypetype.h  dependentdecltypetype.cpp  dependentdecltypetype.h
Type/FunctionType/: functionnoprototype.cpp  functionnoprototype.h  functionprototype.cpp  functionprototype.h  functiontype.cpp  functiontype.h
Type/ReferenceType/: lvaluereferencetype.cpp  lvaluereferencetype.h  referencetype.cpp  referencetype.h  rvaluereferencetype.cpp  rvaluereferencetype.h
Type/TagType/: enumtype.cpp  enumtype.h  recordtype.cpp  recordtype.h  tagtype.cpp  tagtype.h
Type/TypeOfExprType/: dependenttypeofexprtype.cpp  dependenttypeofexprtype.h  typeofexprtype.cpp  typeofexprtype.h
Type/VectorType/: extvectortype.cpp  extvectortype.h  vectortype.cpp  vectortype.h
test/: ASTStructurePrintTest.cpp  ASTStructureTest.cpp  BasicParseTest.cpp  DeclarationTest.cpp  ExpressionTest.cpp  HybridParseTest.cpp  NameRefactorTest.cpp  OpenHelperTest.cpp  OpenerTest.cpp  ParseTest.cpp  PrintTest.cpp  RefactorTest.cpp  Test.Code  test1.c  test2.c  test3.c  文本文件
(+6 files in other folders)
